--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -6,7 +6,7 @@ name: 中青自动阅读
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0 0/2 * * *'
+     - cron: '0/20 * * *'
   watch:
     types: started
 jobs:
