--- a/.github/workflows/youth.yml
+++ b/.github/workflows/youth.yml
@@ -22,7 +22,8 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/Sunert/Scripts.git ~/Scripts
+            #git clone https://github.com/Sunert/Scripts.git ~/Scripts
+            git clone https://github.com/akuticlouds/actions-youth.git
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
@@ -30,13 +31,14 @@ jobs:
       - name: npm install
         if: env.YOUTH_HEADER
         run: |
-          cd ~/Scripts
+          #cd ~/Scripts
           npm install
       - name: '运行 【中青看点】'
         if: env.YOUTH_HEADER
         run: |
-          cd ~/Scripts
-          node Task/youth.js
+          #cd ~/Scripts
+          #node Task/youth.js
+          node youth.js
         env:
           YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
